refactor StreamExamples to use toList() for collecting stream results